# qfcmd

./: .gitignore  CMakeLists.txt
.github/workflows/: ubuntu_qt6.yml
include/qfcmd/: filesystem.h  qfcmd.h
lang/: qfcmd_zh_CN.ts
res/: app.rc
src/: aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  fcmdshortcutmanager.cpp  fcmdshortcutmanager.hpp  fcmdtabwidget.cpp  fcmdtabwidget.hpp  foldertab.cpp  foldertab.hpp  foldertab.ui  keyboardshortcutsform.cpp  keyboardshortcutsform.hpp  keyboardshortcutsform.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  perferencesdialog.cpp  settings.cpp  settings.hpp
src/model/: filesystem.cpp  filesystem.hpp  filesystem_p.cpp  filesystem_p.hpp  keyboardshortcuts.cpp  keyboardshortcuts.hpp
src/utils/: container.cpp  container.hpp  log.cpp  log.hpp  serialization.cpp  serialization.hpp  vfsrouter.cpp  vfsrouter.hpp  win32.cpp  win32.hpp
src/vfs/: file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  local.cpp  local.hpp  vfs.cpp  vfs.hpp  virtual.cpp  virtual.hpp
src/view/: fstreeview.cpp  fstreeview.hpp  settingsdialog.cpp  settingsdialog.hpp
src/widget/: fsfoldertab.cpp  fsfoldertab.hpp  fstabbar.cpp  fstabbar.hpp  fstabwidget.cpp  fstabwidget.hpp  fstreeview.cpp  fstreeview.hpp  mainwindow.cpp  mainwindow.hpp  perferencesdialog.hpp  perferencesdialog.ui
